possible fix #8: overflow-hidden

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -12,6 +12,7 @@ body {
   font-family: $syncopate-font-family;
   display: block;
   position: absolute;
+  overflow: hidden;
 }
 
 html,
